# crypto_etl_project

./: Cargo.toml  README.md  docker-compose.yml
migrations/: 20240101_create_crypto_tables.sql
src/: config.rs  extraction.rs  loading.rs  main.rs  models.rs  transformation.rs
